# OTUS_Prof_DZ_05

./: CMakeLists.txt  ControlEditor_8h.html  ControlEditor_8h__dep__incl.map  ControlEditor_8h__dep__incl.md5  ControlEditor_8h__incl.map  ControlEditor_8h__incl.md5  ControlEditor_8h_source.html  Doxyfile  IShapes_8h.html  IShapes_8h__dep__incl.map  IShapes_8h__dep__incl.md5  IShapes_8h__incl.map  IShapes_8h_source.html  MVC__pattern_8cpp.html  MVC__pattern_8cpp__incl.map  MVC__pattern_8cpp__incl.md5  MVC__pattern__gtest_8cpp.html  MVC__pattern__gtest_8cpp__incl.map  MVC__pattern__gtest_8cpp__incl.md5  MVC__pattern__gtest_8h.html  MVC__pattern__gtest_8h__dep__incl.map  MVC__pattern__gtest_8h__dep__incl.md5  MVC__pattern__gtest_8h__incl.map  MVC__pattern__gtest_8h__incl.md5  MVC__pattern__gtest_8h_source.html  MVC_pattern.cpp  ModelEditor_8h.html  ModelEditor_8h__dep__incl.map  ModelEditor_8h__dep__incl.md5  ModelEditor_8h__incl.map  ModelEditor_8h__incl.md5  ModelEditor_8h_source.html  README.md  README_8md.html  SLManager_8h.html  SLManager_8h__dep__incl.map  SLManager_8h__dep__incl.md5  SLManager_8h__incl.map  SLManager_8h__incl.md5  SLManager_8h_source.html  (+96 more)
.github/workflows/: Documentation.yml  Doxygen.yml  MVC_pattern.yml
Controller/: ControlEditor.h
Docs/: index.html
Docs/html/: _i_shapes_8h__incl.map  _i_shapes_8h__incl.md5  _i_shapes_8h_source.html  _m_v_c__pattern_8cpp__incl.md5  _m_v_c__pattern__gtest_8cpp__incl.dot  _m_v_c__pattern__gtest_8h.html  _m_v_c__pattern__gtest_8h__dep__incl.md5  _m_v_c__pattern__gtest_8h__incl.dot  annotated.html  (+82 more)
Model/: Editor.h  ModelEditor.h
Observ/: Observ.h
Service/: SLManager.h
View/: ViewEditor.h
headers/: VectorEditor.h
search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  groups_0.js  groups_1.js  (+4 more)
test/: MVC_pattern_gtest.cpp
(+421 files in other folders)
